        * Remove "resources" method from "SPVM::Builder::Config" module. Intead, use "get_resource" method and "get_resource_names" methods.
        * The default value of "include_dirs" of "SPVM::Builder::Config" module becomes an empty array reference.
        * "new" method of "SPVM::Builder::Config" module must need "file" option.
0.9606  2022-06-13
        * Add build_dynamic_lib_dist_precompile method to SPVM::Builder::API.
          This is same as build_shared_lib_dist_precompile method.
          build_shared_lib_dist_precompile method is remained for backwards compatibility.
        * Add build_dynamic_lib_dist_native method to SPVM::Builder::API.
          This is same as build_shared_lib_dist_native method.
          build_shared_lib_dist_native method is remained for backwards compatibility.
        * Add config field to SPVM::Builder::ObjectFileInfo.
        * Add config field to SPVM::Builder::LinkInfo.
        * Add output_type field to SPVM::Builder::Config.
        * Add lib_type field to SPVM::Builder::ObjectFileInfo.
        [NON BACKWORD COMPATIBLE CHANGES]
        * Remove is_exe method from SPVM::Builder::Config.
        * Remove is_resource field from SPVM::Builder::ObjectFileInfo.
        * Remove is_exe field from SPVM::Builder::ObjectFileInfo.
        * Remove is_exe field from SPVM::Builder::LinkInfo.
        * Remove is_lib_file field from SPVM::Builder::ObjectFileInfo.
        * Rename SPVM::Builder::ObjectFileInfo's "object_file" field to "file".
        
0.9605  2022-06-10
        [CHANGE]
        * switch statement can have only default statement.
        * switch statement don't need to have case statements.
        * The values of the case statements can't be duplicated.
        * Perform unary numeric widening conversion to the condition of switch statement.
        * "break" statement can be ommited.
        * Improve the messages of the compilation errors.
        * Add the following functions to Fn class